Add DowloadViewController and Save data in CloudKit

--- a/audioManager/Info.plist
+++ b/audioManager/Info.plist
@@ -23,7 +23,7 @@
 			<string>com.audioManager</string>
 			<key>CFBundleURLSchemes</key>
 			<array>
-				<string>recvoice</string>
+				<string>RecVoice</string>
 			</array>
 		</dict>
 	</array>
